--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "google-libphonenumber": "^3.2.25",
     "intl-tel-input": "^17.0.3",
     "ng-animate": "^1.0.0",
+    "ng-multiselect-dropdown": "^0.3.9",
     "ng-otp-input": "^1.8.1",
     "ng-uikit-pro-standard": "^1.0.0",
     "ng-zorro-antd": "^13.0.1",
@@ -48,7 +49,7 @@
     "ngx-spinner": "^13.0.0",
     "path-browserify": "^1.0.1",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
