--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "~13.0.1",
     "@angular/cdk": "^13.0.2",
     "@angular/common": "~13.0.1",
