--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "bootstrap": "^5.1.3",
     "country-locator": "^2.1.1",
     "google-libphonenumber": "^3.2.25",
+    "google-maps": "^4.3.3",
     "intl-tel-input": "^17.0.3",
     "ng-animate": "^1.0.0",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng-otp-input": "^1.8.1",
     "ng-uikit-pro-standard": "^1.0.0",
     "ng-zorro-antd": "^13.0.1",
+    "ngx-avatar": "^4.1.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-cookie-service": "^13.1.2",
     "ngx-intl-tel-input": "^3.1.3",
