--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rxjs": "~7.4.0",
     "save": "^2.9.0",
     "stream-browserify": "^3.0.0",
+    "sweetalert2": "^11.7.0",
     "tslib": "^2.4.1",
     "zone.js": "~0.11.4"
   },
