--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~13.0.1",
     "@angular/compiler": "~13.0.1",
     "@angular/core": "~13.0.1",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "~13.0.1",
     "@angular/material": "^15.1.0",
     "@angular/platform-browser": "~13.0.1",
@@ -41,6 +42,7 @@
     "angular2-multiselect-dropdown": "^5.0.4",
     "bootstrap": "^5.1.3",
     "country-locator": "^2.1.1",
+    "firebase": "^9.16.0",
     "google-libphonenumber": "^3.2.25",
     "google-maps": "^4.3.3",
     "intl-tel-input": "^17.0.3",
