--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ngx-number-format": "^13.0.1",
     "ngx-spinner": "^13.0.0",
     "path-browserify": "^1.0.1",
+    "pipe": "^1.1.0",
     "rxjs": "~7.4.0",
     "save": "^2.9.0",
     "stream-browserify": "^3.0.0",
