--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.0",
+    "@schematics/angular": "^9.1.0",
+    "angular-ng-autocomplete": "^2.0.12",
     "angular-ng-stepper": "^1.0.6",
     "angular2-multiselect-dropdown": "^5.0.4",
     "bootstrap": "^5.1.3",
