--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ngx-mat-select": "^1.5.4",
     "ngx-mat-select-search": "^7.0.0",
     "ngx-number-format": "^13.0.1",
+    "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^13.0.0",
     "path-browserify": "^1.0.1",
     "pipe": "^1.1.0",
