--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "google-maps": "^4.3.3",
     "intl-tel-input": "^17.0.3",
     "ng-animate": "^1.0.0",
+    "ng-image-slider": "^7.0.0",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng-otp-input": "^1.8.1",
     "ng-uikit-pro-standard": "^1.0.0",
@@ -67,8 +68,8 @@
     "rxjs": "~7.4.0",
     "save": "^2.9.0",
     "stream-browserify": "^3.0.0",
-    "sweetalert2": "^11.7.0",
-    "tslib": "^2.4.1",
+    "sweetalert2": "^11.4.8",
+    "tslib": "^2.5.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
