--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "-": "^0.0.1",
     "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "~15.2.2",
+    "@angular/animations": "^15.2.2",
     "@angular/cdk": "^15.2.2",
-    "@angular/common": "~15.2.2",
-    "@angular/compiler": "~15.2.2",
-    "@angular/core": "~15.2.2",
+    "@angular/common": "^15.2.2",
+    "@angular/compiler": "^15.2.2",
+    "@angular/core": "^15.2.2",
     "@angular/fire": "^7.5.0",
-    "@angular/forms": "~15.2.2",
+    "@angular/forms": "^15.2.2",
     "@angular/material": "^15.1.0",
-    "@angular/platform-browser": "~15.2.2",
-    "@angular/platform-browser-dynamic": "~15.2.2",
-    "@angular/router": "~15.2.2",
+    "@angular/platform-browser": "^15.2.2",
+    "@angular/platform-browser-dynamic": "^15.2.2",
+    "@angular/router": "^15.2.2",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -73,9 +73,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.10",
-    "@angular/cli": "~13.0.2",
-    "@angular/compiler-cli": "~15.2.2",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^15.2.2",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.10.2",
     "@types/node": "^16.11.7",
