--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@schematics/angular": "^9.1.0",
     "angular-ng-autocomplete": "^2.0.12",
     "angular-ng-stepper": "^1.0.6",
+    "angular-responsive-carousel": "^2.1.2",
+    "angular-responsive-carousel-slide-3": "^1.0.6",
     "angular2-multiselect-dropdown": "^5.0.4",
     "bootstrap": "^5.2.3",
     "country-locator": "^2.1.1",
@@ -52,6 +54,7 @@
     "ng-image-slider": "^7.0.0",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng-otp-input": "^1.8.1",
+    "ng-toggle-button": "^1.5.0",
     "ng-uikit-pro-standard": "^1.0.0",
     "ng-zorro-antd": "^15.0.3",
     "ngx-avatar": "^4.1.0",
