--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/fontawesome-free": "5.13.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@material/form-field": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ng-select/ng-select": "^8.1.1",
@@ -39,6 +41,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.0",
     "@schematics/angular": "^9.1.0",
+    "angular-font-awesome": "^3.1.2",
     "angular-ng-autocomplete": "^2.0.12",
     "angular-ng-stepper": "^1.0.6",
     "angular-responsive-carousel": "^2.1.2",
@@ -81,6 +84,7 @@
     "@angular/compiler-cli": "^15.2.2",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.10.2",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^16.11.7",
     "install": "^0.13.0",
     "jasmine-core": "~3.10.1",
